helm/template-lab/argo-rollout-istio/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: rollouts-demo-vs
spec:
  gateways:
  - rollouts-demo-gateway
  hosts:
  - rollouts-demo-vsvc1.local
  http:
  - name: canary
    route:
    - destination:
        host: rollouts-demo-stable
        port:
          number: 80
      weight: 100
    - destination:
        host: rollouts-demo-canary
        port:
          number: 80
      weight: 0
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: rollouts-demo-canary-vs
spec:
  gateways:
  - rollouts-demo-gateway
  hosts:
  - rollouts-demo-canary-vsvc1.local
  http:
  - route:
    - destination:
        host: rollouts-demo-canary
        port:
          number: 80
